--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -10,6 +10,7 @@
 <body>
     <div id="board">
         <h1>Tic Tac Toe</h1>
+        <div id="endgame-text"></div>
         <h2 class="game--status"></h2>
         <div class="row">
             <div class="top left"></div>
@@ -28,9 +29,6 @@
 
         </div>
     </div>
-    <button class="plusOne" onclick="buttonClicked()">Click me for +1</button>
-    <div id="oneMore">
-        <button class="plusOne" onclick="myFunction()">Click me for +2</button>
     </div>
 </body>
 
